<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="60dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/lab_work_text"
            android:textAlignment="center"
            android:textSize="26sp" />

        <Button
            android:id="@+id/buttonLab1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lab1_button_text" />
        <Button
            android:id="@+id/buttonLab2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lab2_button_text" />
        <Button
            android:id="@+id/buttonLab3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lab3_button_text" />
        <Button
            android:id="@+id/buttonLab4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lab4_button_text" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>