<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".lab4.AudioMenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonAudioExample"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_example" />

        <Button
            android:id="@+id/buttonAudioLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_local" />

        <Button
            android:id="@+id/buttonAudioLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_link" />
    </LinearLayout>
</FrameLayout>